--- a/index.html
+++ b/index.html
@@ -23,11 +23,6 @@
 						<p>Bienvenue sur mon site web vitrine!</p>
 					</div>
 
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
-					</header>
-
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
@@ -153,16 +148,16 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div style="display: flex; justify-content: center;">
-							<section>
+					<footer id="footer" style="display: flex; flex-direction: column;">
+						<div style="display: flex; justify-content: center; align-items: center; text-align: center;">
+							<div>
 								<h3>Numero de téléphone</h3>
 								<p><a href="#">(000) 000-0000</a></p>
-							</section>
-							<section> <!--TODO MAILTO pour cliquer et arriver sur le email de sol-->
+							</div>
+							<div> <!--TODO MAILTO pour cliquer et arriver sur le email de sol-->
 								<h3>Email</h3>
 								<p><a href="#">info@untitled.tld</a></p>
-							</section>
+							</div>
 						</div>
 						<div style="justify-content: center;">
 							<h3>Social</h3>
