--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
 				<!-- Footer -->
 					<footer id="footer" style="display: flex; flex-direction: column;">
 						<div style="display: flex; justify-content: center; align-items: center; text-align: center;">
-							<div>
+							<div style="margin-right: 4em; text-align: center;">
 								<h3>Numero de téléphone</h3>
 								<p><a href="#">(000) 000-0000</a></p>
 							</div>
-							<div> <!--TODO MAILTO pour cliquer et arriver sur le email de sol-->
+							<div style="text-align: center;"> <!--TODO MAILTO pour cliquer et arriver sur le email de sol-->
 								<h3>Email</h3>
 								<p><a href="#">info@untitled.tld</a></p>
 							</div>
