--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
 								<p><a href="#">info@untitled.tld</a></p>
 							</div>
 						</div>
-						<div style="justify-content: center;">
+						<div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
 							<h3>Social</h3>
-							<ul class="icons alt">
+							<ul class="icons alt" style="text-align: center;">
 								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/girardsol/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
