--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
 						<div style="display: flex; justify-content: center; align-items: center; text-align: center;">
 							<div style="margin-right: 4em; text-align: center;">
 								<h3>Numero de téléphone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p style="text-align: center;"><a href="#">(000) 000-0000</a></p>
 							</div>
 							<div style="text-align: center;"> <!--TODO MAILTO pour cliquer et arriver sur le email de sol-->
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p style="text-align: center;"><a href="#">info@untitled.tld</a></p>
 							</div>
 						</div>
 						<div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
