--- a/index.html
+++ b/index.html
@@ -54,27 +54,11 @@
 									<li><a href="generic.html" class="button large">Mes créations</a></li>
 								</ul>
 							</div>
-
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
-
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer" style="display: flex; flex-direction: column;">
-						<div style="display: flex; justify-content: center; align-items: center; text-align: center;">
+						<div style="display: flex; justify-content: center; align-items: center; text-align: center; margin-top: 4em;">
 							<div style="margin-right: 4em; text-align: center;">
 								<h3>Numero de téléphone</h3>
 								<p style="text-align: center;"><a href="#">(000) 000-0000</a></p>
