--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/girardsol/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.youtube.com/@girardsol" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
 						</ul>
 					</nav>
 
@@ -63,9 +64,9 @@
 								<h3>Numero de téléphone</h3>
 								<p style="text-align: center;"><a href="#">(000) 000-0000</a></p>
 							</div>
-							<div style="text-align: center;"> <!--TODO MAILTO pour cliquer et arriver sur le email de sol-->
+							<div style="text-align: center;">
 								<h3>Email</h3>
-								<p style="text-align: center;"><a href="#">info@untitled.tld</a></p>
+								<p style="text-align: center;"><a href="mailto:beans@hotmail.com">beans@hotmail.com</a></p>
 							</div>
 						</div>
 						<div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
@@ -73,6 +74,7 @@
 							<ul class="icons alt" style="text-align: center;">
 								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/girardsol/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.youtube.com/@girardsol" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
 							</ul>
 						</div>
 					</footer>
