--- a/index.html
+++ b/index.html
@@ -42,13 +42,41 @@
 						<!-- Featured Post -->
 							<div class="post featured">
 								<header class="major">
-									<h2><span class="date">Présentation</span></h2>
+									<h2>Présentation</h2>
 									<p>
 										Salut ! Je m'appelle Sol Girard, je suis un jeune artiste de 19 ans originaire de Gaspé, et je me lance à fond dans ma passion.
 
 										Je peins des toiles à l'acrylique ainsi que des murales, autant à l’extérieur qu’à l’intérieur. J’aime transposer mes idées, mes rêves et mes scénarios en grand format et en couleur pour leur donner vie. Ce que je préfère, c’est représenter des mondes fantastiques où tout semble simple et heureux. Mais j’aime aussi donner plus de profondeur à mes œuvres, en y cachant des éléments et en laissant apparaître un côté plus critique, plus poétique.
 
 										Je fais également des vidéos sur YouTube pour gagner en visibilité et partager mon processus de création. J’aime toucher à toutes sortes de compétences artistiques, apprendre de nouvelles techniques, découvrir de nouveaux matériaux et façons de créer.
+									</p>
+									<h2>CV</h2>
+									<p>
+										· 2021 – Engagé par la Maison des jeunes de Gaspé (projet Chill-Cave)
+
+										· 2022 – Murale La course du renard, pour la microbrasserie Frontibus
+
+										· 2022 – Murale Trois visages, commandée par la Ville de Gaspé
+
+										· 2022 – Murale Le jardin, réalisée pour le marché public de Gaspé
+
+										· 2023 – Murale Merci au concierge, à l’école C.-E.-Pouliot
+
+										· 2024 – Toile collective les avions sont l’inspiration des pigeons, avec Artisimo
+
+										· 2024 – Murale Le spa mal un café, pour le café Oxymel
+
+										· 2024 – Toile commune L’attaque des monstres, pour la Ville de Saint-Malo
+
+										· 2024 – Murale La concoction des renards, pour la microbrasserie Frontibus
+
+										· 2025 – Toile collective Le conte de fées, avec Artisimo
+
+										· 2025 – 1er vernisage à Nano Cinco
+
+										· 2025 – Murale Grue-Cheese, pour le Resto-pub La Cuisine
+
+										· 2025 – contrat de fournisseur d’œuvre pour le Baz’Art
 									</p>
 								</header>
 								<ul class="actions special">
