--- a/generic.html
+++ b/generic.html
@@ -38,7 +38,21 @@
 			<!-- Main -->
 			<div id="main">
 
-				
+				<div class="card">
+					<img src="images/0.jpg" alt="image 0" style="max-width: 100%; margin: 0.5em;" />
+					<div style="display: flex;">
+						<h4>La course du renard</h4>
+						<span class="date">2022</span>
+					</div>
+				</div>
+
+				<div class="card">
+					<img src="images/1.jpg" alt="image 1" style="max-width: 100%; margin: 0.5em;" />
+					<div style="display: flex;">
+						<h4>Les trois visages</h4>
+						<span class="date">2022</span>
+					</div>
+				</div>
 
 			</div>
 
