--- a/index.html
+++ b/index.html
@@ -52,29 +52,29 @@
 									</p>
 									<h2>CV</h2>
 									<p>
-										· 2021 – Engagé par la Maison des jeunes de Gaspé (projet Chill-Cave)
+										· 2021 – Engagé par la Maison des jeunes de Gaspé (projet Chill-Cave) <br />
 
-										· 2022 – Murale La course du renard, pour la microbrasserie Frontibus
+										· 2022 – Murale La course du renard, pour la microbrasserie Frontibus <br />
 
-										· 2022 – Murale Trois visages, commandée par la Ville de Gaspé
+										· 2022 – Murale Trois visages, commandée par la Ville de Gaspé <br />
 
-										· 2022 – Murale Le jardin, réalisée pour le marché public de Gaspé
+										· 2022 – Murale Le jardin, réalisée pour le marché public de Gaspé <br />
 
-										· 2023 – Murale Merci au concierge, à l’école C.-E.-Pouliot
+										· 2023 – Murale Merci au concierge, à l’école C.-E.-Pouliot <br />
+										 
+										· 2024 – Toile collective les avions sont l’inspiration des pigeons, avec Artisimo <br />
 
-										· 2024 – Toile collective les avions sont l’inspiration des pigeons, avec Artisimo
+										· 2024 – Murale Le spa mal un café, pour le café Oxymel <br />
 
-										· 2024 – Murale Le spa mal un café, pour le café Oxymel
+										· 2024 – Toile commune L’attaque des monstres, pour la Ville de Saint-Malo <br />
 
-										· 2024 – Toile commune L’attaque des monstres, pour la Ville de Saint-Malo
+										· 2024 – Murale La concoction des renards, pour la microbrasserie Frontibus <br />
 
-										· 2024 – Murale La concoction des renards, pour la microbrasserie Frontibus
+										· 2025 – Toile collective Le conte de fées, avec Artisimo <br />
 
-										· 2025 – Toile collective Le conte de fées, avec Artisimo
+										· 2025 – 1er vernisage à Nano Cinco <br />
 
-										· 2025 – 1er vernisage à Nano Cinco
-
-										· 2025 – Murale Grue-Cheese, pour le Resto-pub La Cuisine
+										· 2025 – Murale Grue-Cheese, pour le Resto-pub La Cuisine <br />
 
 										· 2025 – contrat de fournisseur d’œuvre pour le Baz’Art
 									</p>
