--- a/generic.html
+++ b/generic.html
@@ -11,6 +11,23 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+            .grid-container {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 20px;
+                max-width: 600px;
+                margin: auto;
+            }
+
+            .customCard {
+                background-color: #f8f9fa;
+                padding: 20px;
+                border-radius: 8px;
+                text-align: center;
+                box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
+            }
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -36,19 +53,19 @@
 			</nav>
 
 			<!-- Main -->
-			<div id="main">
+			<div id="main" class="grid-container">
 
-				<div class="card">
+				<div class="customCard">
 					<img src="images/0.jpg" alt="image 0" style="max-width: 100%; margin: 0.5em;" />
-					<div style="display: flex;">
+					<div>
 						<h4>La course du renard</h4>
 						<span class="date">2022</span>
 					</div>
 				</div>
 
-				<div class="card">
+				<div class="customCard">
 					<img src="images/1.jpg" alt="image 1" style="max-width: 100%; margin: 0.5em;" />
-					<div style="display: flex;">
+					<div>
 						<h4>Les trois visages</h4>
 						<span class="date">2022</span>
 					</div>
