text-align left for the CV contents

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 										Je fais également des vidéos sur YouTube pour gagner en visibilité et partager mon processus de création. J’aime toucher à toutes sortes de compétences artistiques, apprendre de nouvelles techniques, découvrir de nouveaux matériaux et façons de créer.
 									</p>
 									<h2>CV</h2>
-									<p>
+									<p style="text-align: left;">
 										· 2021 – Engagé par la Maison des jeunes de Gaspé (projet Chill-Cave) <br />
 
 										· 2022 – Murale La course du renard, pour la microbrasserie Frontibus <br />
