--- a/generic.html
+++ b/generic.html
@@ -178,13 +178,6 @@
 				<div class="customCard">
 					<img src="images/14.jpg" alt="image 14" style="max-width: 100%; margin: 0.5em;" />
 					<div>
-						<h4>Toile collective</h4>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/15.jpg" alt="image 15" style="max-width: 100%; margin: 0.5em;" />
-					<div>
 						<h4>L'attaque des monstres</h4>
 						<span class="date">2024</span>
 						<p><i>Saint malo</i></p>
@@ -192,28 +185,21 @@
 				</div>
 
 				<div class="customCard">
-					<img src="images/16.jpg" alt="image 16" style="max-width: 100%; margin: 0.5em;" />
+					<img src="images/15.jpg" alt="image 15" style="max-width: 100%; margin: 0.5em;" />
 					<div>
 						<h4>Les avions sont l'inspiration des pigeons</h4>
 					</div>
 				</div>
 
 				<div class="customCard">
-					<img src="images/17.jpg" alt="image 17" style="max-width: 100%; margin: 0.5em;" />
+					<img src="images/16.jpg" alt="image 16" style="max-width: 100%; margin: 0.5em;" />
 					<div>
 						<h4>Conte de fées</h4>
 					</div>
 				</div>
 
 				<div class="customCard">
-					<img src="images/18.jpg" alt="image 18" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Toile</h4>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/19.jpg" alt="image 19" style="max-width: 100%; margin: 0.5em;" />
+					<img src="images/17.jpg" alt="image 17" style="max-width: 100%; margin: 0.5em;" />
 					<div>
 						<h4>Les brocoloc</h4>
 						<span class="date">2024</span>
@@ -221,7 +207,7 @@
 				</div>
 
 				<div class="customCard">
-					<img src="images/20.jpg" alt="image 20" style="max-width: 100%; margin: 0.5em;" />
+					<img src="images/18.jpg" alt="image 18" style="max-width: 100%; margin: 0.5em;" />
 					<div>
 						<h4>J'aime pas les obergines</h4>
 						<span class="date">2023</span>
@@ -229,7 +215,7 @@
 				</div>
 
 				<div class="customCard">
-					<img src="images/21.jpg" alt="image 21" style="max-width: 100%; margin: 0.5em;" />
+					<img src="images/19.jpg" alt="image 19" style="max-width: 100%; margin: 0.5em;" />
 					<div>
 						<h4>Le meilleur film</h4>
 						<span class="date">2022</span>
@@ -237,7 +223,7 @@
 				</div>
 
 				<div class="customCard">
-					<img src="images/22.jpg" alt="image 22" style="max-width: 100%; margin: 0.5em;" />
+					<img src="images/20.jpg" alt="image 20" style="max-width: 100%; margin: 0.5em;" />
 					<div>
 						<h4>Ma joconde</h4>
 						<span class="date">2022</span>
@@ -245,7 +231,7 @@
 				</div>
 
 				<div class="customCard">
-					<img src="images/23.jpg" alt="image 23" style="max-width: 100%; margin: 0.5em;" />
+					<img src="images/21.jpg" alt="image 21" style="max-width: 100%; margin: 0.5em;" />
 					<div>
 						<h4>MSV</h4>
 						<span class="date">2024</span>
@@ -253,7 +239,7 @@
 				</div>
 
 				<div class="customCard">
-					<img src="images/24.jpg" alt="image 24" style="max-width: 100%; margin: 0.5em;" />
+					<img src="images/22.jpg" alt="image 22" style="max-width: 100%; margin: 0.5em;" />
 					<div>
 						<h4>C'est pas moi</h4>
 						<span class="date">2024</span>
@@ -261,7 +247,7 @@
 				</div>
 
 				<div class="customCard">
-					<img src="images/25.jpg" alt="image 25" style="max-width: 100%; margin: 0.5em;" />
+					<img src="images/23.jpg" alt="image 23" style="max-width: 100%; margin: 0.5em;" />
 					<div>
 						<h4>Le rêve d'une nuit</h4>
 						<span class="date">2024</span>
@@ -269,7 +255,7 @@
 				</div>
 
 				<div class="customCard">
-					<img src="images/26.jpg" alt="image 26" style="max-width: 100%; margin: 0.5em;" />
+					<img src="images/24.jpg" alt="image 24" style="max-width: 100%; margin: 0.5em;" />
 					<div>
 						<h4>Tadam</h4>
 						<span class="date">2023</span>
@@ -277,7 +263,7 @@
 				</div>
 
 				<div class="customCard">
-					<img src="images/27.jpg" alt="image 27" style="max-width: 100%; margin: 0.5em;" />
+					<img src="images/25.jpg" alt="image 25" style="max-width: 100%; margin: 0.5em;" />
 					<div>
 						<h4>Le domaine des batards</h4>
 						<span class="date">2022</span>
@@ -285,7 +271,7 @@
 				</div>
 
 				<div class="customCard">
-					<img src="images/28.jpg" alt="image 28" style="max-width: 100%; margin: 0.5em;" />
+					<img src="images/26.jpg" alt="image 26" style="max-width: 100%; margin: 0.5em;" />
 					<div>
 						<h4>Je ne sais pas si vous été prêt a cette éventualité personnellement, je le suis</h4>
 						<span class="date">2024</span>
@@ -293,7 +279,7 @@
 				</div>
 
 				<div class="customCard">
-					<img src="images/29.jpg" alt="image 29" style="max-width: 100%; margin: 0.5em;" />
+					<img src="images/27.jpg" alt="image 27" style="max-width: 100%; margin: 0.5em;" />
 					<div>
 						<h4>Le bien et le mal c'est relatif</h4>
 						<span class="date">2025</span>
@@ -301,7 +287,7 @@
 				</div>
 
 				<div class="customCard">
-					<img src="images/30.jpg" alt="image 30" style="max-width: 100%; margin: 0.5em;" />
+					<img src="images/28.jpg" alt="image 28" style="max-width: 100%; margin: 0.5em;" />
 					<div>
 						<h4>Éclipse</h4>
 						<span class="date">2025</span>
@@ -309,7 +295,7 @@
 				</div>
 
 				<div class="customCard">
-					<img src="images/31.jpg" alt="image 31" style="max-width: 100%; margin: 0.5em;" />
+					<img src="images/29.jpg" alt="image 29" style="max-width: 100%; margin: 0.5em;" />
 					<div>
 						<h4>La maison dansante</h4>
 						<span class="date">2024</span>
@@ -317,9 +303,33 @@
 				</div>
 
 				<div class="customCard">
-					<img src="images/32.jpg" alt="image 32" style="max-width: 100%; margin: 0.5em;" />
+					<img src="images/30.jpg" alt="image 30" style="max-width: 100%; margin: 0.5em;" />
 					<div>
 						<h4>Nous</h4>
+						<span class="date">2025</span>
+					</div>
+				</div>
+
+				<div class="customCard">
+					<img src="images/31.jpg" alt="image 31" style="max-width: 100%; margin: 0.5em;" />
+					<div>
+						<h4>Le calme pendant la tempête</h4>
+						<span class="date">2024</span>
+					</div>
+				</div>
+
+				<div class="customCard">
+					<img src="images/32.jpg" alt="image 32" style="max-width: 100%; margin: 0.5em;" />
+					<div>
+						<h4>Tourne-sol</h4>
+						<span class="date">2025</span>
+					</div>
+				</div>
+
+				<div class="customCard">
+					<img src="images/33.jpg" alt="image 33" style="max-width: 100%; margin: 0.5em;" />
+					<div>
+						<h4>Lobotomie</h4>
 						<span class="date">2025</span>
 					</div>
 				</div>
