--- a/index.html
+++ b/index.html
@@ -51,33 +51,35 @@
 										Je fais également des vidéos sur YouTube pour gagner en visibilité et partager mon processus de création. J’aime toucher à toutes sortes de compétences artistiques, apprendre de nouvelles techniques, découvrir de nouveaux matériaux et façons de créer.
 									</p>
 									<h2>CV</h2>
-									<p style="text-align: left;">
-										· 2021 – Engagé par la Maison des jeunes de Gaspé (projet Chill-Cave) <br />
+									<div style="justify-content: center;">
+										<p style="text-align: left;">
+											· 2021 – Engagé par la Maison des jeunes de Gaspé (projet Chill-Cave) <br />
 
-										· 2022 – Murale La course du renard, pour la microbrasserie Frontibus <br />
+											· 2022 – Murale La course du renard, pour la microbrasserie Frontibus <br />
 
-										· 2022 – Murale Trois visages, commandée par la Ville de Gaspé <br />
+											· 2022 – Murale Trois visages, commandée par la Ville de Gaspé <br />
 
-										· 2022 – Murale Le jardin, réalisée pour le marché public de Gaspé <br />
+											· 2022 – Murale Le jardin, réalisée pour le marché public de Gaspé <br />
 
-										· 2023 – Murale Merci au concierge, à l’école C.-E.-Pouliot <br />
-										 
-										· 2024 – Toile collective les avions sont l’inspiration des pigeons, avec Artisimo <br />
+											· 2023 – Murale Merci au concierge, à l’école C.-E.-Pouliot <br />
 
-										· 2024 – Murale Le spa mal un café, pour le café Oxymel <br />
+											· 2024 – Toile collective les avions sont l’inspiration des pigeons, avec Artisimo <br />
 
-										· 2024 – Toile commune L’attaque des monstres, pour la Ville de Saint-Malo <br />
+											· 2024 – Murale Le spa mal un café, pour le café Oxymel <br />
 
-										· 2024 – Murale La concoction des renards, pour la microbrasserie Frontibus <br />
+											· 2024 – Toile commune L’attaque des monstres, pour la Ville de Saint-Malo <br />
 
-										· 2025 – Toile collective Le conte de fées, avec Artisimo <br />
+											· 2024 – Murale La concoction des renards, pour la microbrasserie Frontibus <br />
 
-										· 2025 – 1er vernisage à Nano Cinco <br />
+											· 2025 – Toile collective Le conte de fées, avec Artisimo <br />
 
-										· 2025 – Murale Grue-Cheese, pour le Resto-pub La Cuisine <br />
+											· 2025 – 1er vernisage à Nano Cinco <br />
 
-										· 2025 – contrat de fournisseur d’œuvre pour le Baz’Art
-									</p>
+											· 2025 – Murale Grue-Cheese, pour le Resto-pub La Cuisine <br />
+
+											· 2025 – contrat de fournisseur d’œuvre pour le Baz’Art
+										</p>
+									</div>
 								</header>
 								<ul class="actions special">
 									<li><a href="generic.html" class="button large">Mes créations</a></li>
