trying to fix the cv for phone users

--- a/index.html
+++ b/index.html
@@ -52,33 +52,33 @@
 									</p>
 									<h2>CV</h2>
 									<div style="display: flex; justify-content: center; align-items:center;">
-										<p style="text-align: left;">
-											· 2021 – Engagé par la Maison des jeunes de Gaspé (projet Chill-Cave) <br />
+										<ul style="list-style: none; padding-left: 0; width: 100%;">
+											<li style="margin-bottom: 1em;">· 2021 – Engagé par la Maison des jeunes de Gaspé (projet Chill-Cave)</li>
 
-											· 2022 – Murale La course du renard, pour la microbrasserie Frontibus <br />
+											<li style="margin-bottom: 1em;">· 2022 – Murale La course du renard, pour la microbrasserie Frontibus</li>
 
-											· 2022 – Murale Trois visages, commandée par la Ville de Gaspé <br />
+											<li style="margin-bottom: 1em;">· 2022 – Murale Trois visages, commandée par la Ville de Gaspé</li>
 
-											· 2022 – Murale Le jardin, réalisée pour le marché public de Gaspé <br />
+											<li style="margin-bottom: 1em;">· 2022 – Murale Le jardin, réalisée pour le marché public de Gaspé</li>
 
-											· 2023 – Murale Merci au concierge, à l’école C.-E.-Pouliot <br />
+											<li style="margin-bottom: 1em;">· 2023 – Murale Merci au concierge, à l'école C.-E.-Pouliot</li>
 
-											· 2024 – Toile collective les avions sont l’inspiration des pigeons, avec Artisimo <br />
+											<li style="margin-bottom: 1em;">· 2024 – Toile collective les avions sont l'inspiration des pigeons, avec Artisimo</li>
 
-											· 2024 – Murale Le spa mal un café, pour le café Oxymel <br />
+											<li style="margin-bottom: 1em;">· 2024 – Murale Le spa mal un café, pour le café Oxymel</li>
 
-											· 2024 – Toile commune L’attaque des monstres, pour la Ville de Saint-Malo <br />
+											<li style="margin-bottom: 1em;">· 2024 – Toile commune L'attaque des monstres, pour la Ville de Saint-Malo</li>
 
-											· 2024 – Murale La concoction des renards, pour la microbrasserie Frontibus <br />
+											<li style="margin-bottom: 1em;">· 2024 – Murale La concoction des renards, pour la microbrasserie Frontibus</li>
 
-											· 2025 – Toile collective Le conte de fées, avec Artisimo <br />
+											<li style="margin-bottom: 1em;">· 2025 – Toile collective Le conte de fées, avec Artisimo</li>
 
-											· 2025 – 1er vernisage à Nano Cinco <br />
+											<li style="margin-bottom: 1em;">· 2025 – 1er vernisage à Nano Cinco</li>
 
-											· 2025 – Murale Grue-Cheese, pour le Resto-pub La Cuisine <br />
+											<li style="margin-bottom: 1em;">· 2025 – Murale Grue-Cheese, pour le Resto-pub La Cuisine</li>
 
-											· 2025 – contrat de fournisseur d’œuvre pour le Baz’Art
-										</p>
+											<li style="margin-bottom: 1em;">· 2025 – contrat de fournisseur d'œuvre pour le Baz'Art</li>
+										</ul>
 									</div>
 								</header>
 								<ul class="actions special">
