--- a/generic.html
+++ b/generic.html
@@ -53,286 +53,301 @@
 			</nav>
 
 			<!-- Main -->
-			<div id="main" class="grid-container">
+			<div id="main">
 
-				<div class="customCard">
-					<img src="images/0.jpg" alt="image 0" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>La course du renard</h4>
-						<span class="date">2022</span>
+				<!--Murales-->
+				<h2>Murales</h2>
+				<div class="grid-container">
+
+					<div class="customCard">
+						<img src="images/0.jpg" alt="image 0" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>La course du renard</h4>
+							<span class="date">2022</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/1.jpg" alt="image 1" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Les trois visages</h4>
+							<span class="date">2022</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/2.jpg" alt="image 2" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Merci les concierges</h4>
+							<span class="date">2023</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/3.jpg" alt="image 3" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Si je t'attrape je te mange</h4>
+							<span class="date">2024</span>
+							<p><i>Murale personnelle</i></p>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/4.jpg" alt="image 4" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>La concoction des renards</h4>
+							<span class="date">2024</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/5.jpg" alt="image 5" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>La poule et le chat</h4>
+							<span class="date">2023</span>
+							<p><i>Murale personnelle</i></p>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/6.jpg" alt="image 6" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Dragon bleu</h4>
+							<span class="date">2022</span>
+							<p><i>Murale personnelle</i></p>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/7.jpg" alt="image 7" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Octopus</h4>
+							<span class="date">2022</span>
+							<p><i>Murale bénévole</i></p>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/8.jpg" alt="image 8" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>La crevette</h4>
+							<span class="date">2023</span>
+							<p><i>Murale personnelle</i></p>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/9.jpg" alt="image 9" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Coucou les humain</h4>
+							<span class="date">2022</span>
+							<p><i>Murale bénévole</i></p>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/10.jpg" alt="image 10" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Le joyeux pirate</h4>
+							<span class="date">2023</span>
+							<p><i>Murale personnelle</i></p>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/11.jpg" alt="image 11" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Combat cartoon</h4>
+							<span class="date">2025</span>
+							<p><i>Murale bénévole</i></p>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/12.jpg" alt="image 12" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Spa mal un café</h4>
+							<span class="date">2024</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/13.jpg" alt="image 13" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Grue-Cheese</h4>
+							<span class="date">2025</span>
+						</div>
 					</div>
 				</div>
 
-				<div class="customCard">
-					<img src="images/1.jpg" alt="image 1" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Les trois visages</h4>
-						<span class="date">2022</span>
+				<!--Toiles collective-->
+				<h2>Toiles collective</h2>
+				<div class="grid-container">
+					<div class="customCard">
+						<img src="images/14.jpg" alt="image 14" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>L'attaque des monstres</h4>
+							<span class="date">2024</span>
+							<p><i>Saint malo</i></p>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/15.jpg" alt="image 15" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Les avions sont l'inspiration des pigeons</h4>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/16.jpg" alt="image 16" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Conte de fées</h4>
+						</div>
 					</div>
 				</div>
 
-				<div class="customCard">
-					<img src="images/2.jpg" alt="image 2" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Merci les concierges</h4>
-						<span class="date">2023</span>
+
+				<!--Peintures-->
+				<h2>Peintures</h2>
+				<div class="grid-container">
+					<div class="customCard">
+						<img src="images/17.jpg" alt="image 17" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Les brocoloc</h4>
+							<span class="date">2024</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/18.jpg" alt="image 18" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>J'aime pas les obergines</h4>
+							<span class="date">2023</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/19.jpg" alt="image 19" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Le meilleur film</h4>
+							<span class="date">2022</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/20.jpg" alt="image 20" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Ma joconde</h4>
+							<span class="date">2022</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/21.jpg" alt="image 21" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>MSV</h4>
+							<span class="date">2024</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/22.jpg" alt="image 22" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>C'est pas moi</h4>
+							<span class="date">2024</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/23.jpg" alt="image 23" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Le rêve d'une nuit</h4>
+							<span class="date">2024</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/24.jpg" alt="image 24" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Tadam</h4>
+							<span class="date">2023</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/25.jpg" alt="image 25" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Le domaine des batards</h4>
+							<span class="date">2022</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/26.jpg" alt="image 26" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Je ne sais pas si vous été prêt a cette éventualité personnellement, je le suis</h4>
+							<span class="date">2024</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/27.jpg" alt="image 27" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Le bien et le mal c'est relatif</h4>
+							<span class="date">2025</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/28.jpg" alt="image 28" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Éclipse</h4>
+							<span class="date">2025</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/29.jpg" alt="image 29" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>La maison dansante</h4>
+							<span class="date">2024</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/30.jpg" alt="image 30" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Nous</h4>
+							<span class="date">2025</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/31.jpg" alt="image 31" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Le calme pendant la tempête</h4>
+							<span class="date">2024</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/32.jpg" alt="image 32" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Tourne-sol</h4>
+							<span class="date">2025</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<img src="images/33.jpg" alt="image 33" style="max-width: 100%; margin: 0.5em;" />
+						<div>
+							<h4>Lobotomie</h4>
+							<span class="date">2025</span>
+						</div>
 					</div>
 				</div>
 
-				<div class="customCard">
-					<img src="images/3.jpg" alt="image 3" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Si je t'attrape je te mange</h4>
-						<span class="date">2024</span>
-						<p><i>Murale personnelle</i></p>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/4.jpg" alt="image 4" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>La concoction des renards</h4>
-						<span class="date">2024</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/5.jpg" alt="image 5" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>La poule et le chat</h4>
-						<span class="date">2023</span>
-						<p><i>Murale personnelle</i></p>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/6.jpg" alt="image 6" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Dragon bleu</h4>
-						<span class="date">2022</span>
-						<p><i>Murale personnelle</i></p>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/7.jpg" alt="image 7" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Octopus</h4>
-						<span class="date">2022</span>
-						<p><i>Murale bénévole</i></p>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/8.jpg" alt="image 8" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>La crevette</h4>
-						<span class="date">2023</span>
-						<p><i>Murale personnelle</i></p>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/9.jpg" alt="image 9" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Coucou les humain</h4>
-						<span class="date">2022</span>
-						<p><i>Murale bénévole</i></p>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/10.jpg" alt="image 10" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Le joyeux pirate</h4>
-						<span class="date">2023</span>
-						<p><i>Murale personnelle</i></p>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/11.jpg" alt="image 11" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Combat cartoon</h4>
-						<span class="date">2025</span>
-						<p><i>Murale bénévole</i></p>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/12.jpg" alt="image 12" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Spa mal un café</h4>
-						<span class="date">2024</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/13.jpg" alt="image 13" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Grue-Cheese</h4>
-						<span class="date">2025</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/14.jpg" alt="image 14" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>L'attaque des monstres</h4>
-						<span class="date">2024</span>
-						<p><i>Saint malo</i></p>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/15.jpg" alt="image 15" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Les avions sont l'inspiration des pigeons</h4>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/16.jpg" alt="image 16" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Conte de fées</h4>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/17.jpg" alt="image 17" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Les brocoloc</h4>
-						<span class="date">2024</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/18.jpg" alt="image 18" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>J'aime pas les obergines</h4>
-						<span class="date">2023</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/19.jpg" alt="image 19" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Le meilleur film</h4>
-						<span class="date">2022</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/20.jpg" alt="image 20" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Ma joconde</h4>
-						<span class="date">2022</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/21.jpg" alt="image 21" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>MSV</h4>
-						<span class="date">2024</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/22.jpg" alt="image 22" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>C'est pas moi</h4>
-						<span class="date">2024</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/23.jpg" alt="image 23" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Le rêve d'une nuit</h4>
-						<span class="date">2024</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/24.jpg" alt="image 24" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Tadam</h4>
-						<span class="date">2023</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/25.jpg" alt="image 25" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Le domaine des batards</h4>
-						<span class="date">2022</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/26.jpg" alt="image 26" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Je ne sais pas si vous été prêt a cette éventualité personnellement, je le suis</h4>
-						<span class="date">2024</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/27.jpg" alt="image 27" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Le bien et le mal c'est relatif</h4>
-						<span class="date">2025</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/28.jpg" alt="image 28" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Éclipse</h4>
-						<span class="date">2025</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/29.jpg" alt="image 29" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>La maison dansante</h4>
-						<span class="date">2024</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/30.jpg" alt="image 30" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Nous</h4>
-						<span class="date">2025</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/31.jpg" alt="image 31" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Le calme pendant la tempête</h4>
-						<span class="date">2024</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/32.jpg" alt="image 32" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Tourne-sol</h4>
-						<span class="date">2025</span>
-					</div>
-				</div>
-
-				<div class="customCard">
-					<img src="images/33.jpg" alt="image 33" style="max-width: 100%; margin: 0.5em;" />
-					<div>
-						<h4>Lobotomie</h4>
-						<span class="date">2025</span>
-					</div>
-				</div>
 			</div>
 
 			<!-- Footer -->
