--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/girardsol/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://www.youtube.com/@girardsol" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
+							<li><a href="https://www.youtube.com/@SOL-t4y" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
 						</ul>
 					</nav>
 
@@ -104,7 +104,7 @@
 							<ul class="icons alt" style="text-align: center;">
 								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/girardsol/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://www.youtube.com/@girardsol" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
+								<li><a href="https://www.youtube.com/@SOL-t4y" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
 							</ul>
 						</div>
 					</footer>
