Update generic.html to create card zoom

--- a/generic.html
+++ b/generic.html
@@ -33,12 +33,12 @@
                 margin-bottom: 0.5em;
             }
 
-            .image-container img {
+            .customCard img {
                 max-width: 100%;
                 transition: transform 0.3s ease;
             }
 
-            .image-container:hover img {
+            .customCard:hover img {
                 transform: scale(2);
             }
 		</style>
