--- a/generic.html
+++ b/generic.html
@@ -26,20 +26,21 @@
                 border-radius: 8px;
                 text-align: center;
                 box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
-            }
-
-            .image-container {
+                transition: transform 0.3s ease, box-shadow 0.3s ease;
                 overflow: hidden;
                 margin-bottom: 0.5em;
+            }
+
+            .customCard:hover {
+                transform: scale(1.05);
+                box-shadow: 4px 4px 15px rgba(0,0,0,0.2);
+                z-index: 10;
+                position: relative;
             }
 
             .customCard img {
                 max-width: 100%;
                 transition: transform 0.3s ease;
-            }
-
-            .customCard:hover img {
-                transform: scale(2);
             }
 		</style>
 	</head>
