--- a/generic.html
+++ b/generic.html
@@ -14,21 +14,22 @@
 		<style>
             .grid-container {
                 display: grid;
-                grid-template-columns: repeat(2, 1fr);
-                gap: 20px;
-                max-width: 800px;
+                grid-template-columns: repeat(1, 1fr);
+                gap: 40px;
+                max-width: 1200px;
                 margin: auto;
             }
 
             .customCard {
                 background-color: #f8f9fa;
-                padding: 20px;
+                padding: 40px;
                 border-radius: 8px;
                 text-align: center;
                 box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
                 transition: transform 0.3s ease, box-shadow 0.3s ease;
                 overflow: hidden;
-                margin-bottom: 0.5em;
+                margin-bottom: 1em;
+                min-height: 400px;
             }
 
             .customCard:hover {
@@ -41,6 +42,23 @@
             .customCard img {
                 max-width: 100%;
                 transition: transform 0.3s ease;
+                max-height: 500px;
+                object-fit: contain;
+            }
+
+            .customCard h4 {
+                font-size: 1.5em;
+                margin-top: 0.8em;
+            }
+
+            .customCard .date {
+                font-size: 1.2em;
+            }
+
+            @media screen and (min-width: 1200px) {
+                .grid-container {
+                    grid-template-columns: repeat(2, 1fr);
+                }
             }
 		</style>
 	</head>
