come back of facebook and removed phone number

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 							<li><a href="generic.html">Mes créations</a></li>
 						</ul>
 						<ul class="icons">
+							<li><a href="https://www.facebook.com/sol.girard.35" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/girardsol/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://www.youtube.com/@SOL-t4y" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
 						</ul>
@@ -89,18 +90,15 @@
 				<!-- Footer -->
 					<footer id="footer" style="display: flex; flex-direction: column;">
 						<div style="display: flex; justify-content: center; align-items: center; text-align: center; margin-top: 4em;">
-							<div style="margin-right: 4em; text-align: center;">
-								<h3>Numero de téléphone</h3>
-								<p style="text-align: center;"><a href="#">(000) 000-0000</a></p>
-							</div>
 							<div style="text-align: center;">
 								<h3>Email</h3>
-								<p style="text-align: center;"><a href="mailto:beans@hotmail.com">beans@hotmail.com</a></p>
+								<p style="text-align: center;"><a href="mailto:solgirard2@gmail.com">solgirard2@gmail.com</a></p>
 							</div>
 						</div>
 						<div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
 							<h3>Social</h3>
 							<ul class="icons alt" style="text-align: center;">
+								<li><a href="https://www.facebook.com/sol.girard.35" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/girardsol/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.youtube.com/@SOL-t4y" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
 							</ul>
