Added email in the header

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
-					<div id="intro">
-						<h1>Sol Girard</h1>
-						<p>Bienvenue sur mon site web vitrine!</p>
-					</div>
+				<div id="intro">
+					<h1>Sol Girard</h1>
+					<h2>Envie d'une murale ?</h2>
+					<h2>Contacte moi</h2>
+					<h2><a href="mailto:solgirard2@gmail.com">solgirard2@gmail.com</a></h2>
+				</div>
 
 				<!-- Nav -->
 					<nav id="nav">
