Added a underline for the email in the header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<h1>Sol Girard</h1>
 					<h2>Envie d'une murale ?</h2>
 					<h2>Contacte moi</h2>
-					<h2><a href="mailto:solgirard2@gmail.com">solgirard2@gmail.com</a></h2>
+					<h2 style="text-decoration: underline;"><a href="mailto:solgirard2@gmail.com">solgirard2@gmail.com</a></h2>
 				</div>
 
 				<!-- Nav -->
