--- a/generic.html
+++ b/generic.html
@@ -447,6 +447,16 @@
 							<span class="date">2025</span>
 						</div>
 					</div>
+
+					<div class="customCard">
+						<div class="image-container">
+							<img src="images/curstBeans.jpg" alt="image 34" />
+						</div>
+						<div>
+							<h4>Cusrt Beans</h4>
+							<span class="date">2053</span>
+						</div>
+					</div>
 				</div>
 
 			</div>
