--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Accueil</a></li>
-							<li><a href="generic.html">Mes créations</a></li>
+							<li><a href="murale.html">Murale</a></li>
+							<li><a href="peinture.html">Peinture</a></li>
+							<li><a href="toile.html">Toile</a></li>
+							<li><a href="autre.html">Autre</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.facebook.com/sol.girard.35" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
